--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:examples:localvideofilter": "copyfiles -f examples/localvideofilter/src/helpers.js examples/localvideofilter/public && browserify examples/localvideofilter/src/index.js > examples/localvideofilter/public/index.js",
     "build:examples:localvideosnapshot": "copyfiles -f examples/localvideosnapshot/src/helpers.js examples/localvideosnapshot/public && browserify examples/localvideosnapshot/src/index.js > examples/localvideosnapshot/public/index.js",
     "build:examples:mediadevices": "copyfiles -f examples/mediadevices/src/helpers.js examples/mediadevices/public && browserify examples/mediadevices/src/index.js > examples/mediadevices/public/index.js",
-    "build:quickstart": "browserify quickstart/src/index.js > quickstart/public/index.js",
+    "build:quickstart": "browserify quickstart/src/index.js -o quickstart/public/index.js -t [ babelify --presets [ env react ] ]",
     "clean": "npm-run-all clean:*",
     "clean:examples": "npm-run-all clean:examples:*",
     "clean:examples:bandwidthconstraints": "rimraf examples/bandwidthconstraints/public/index.js examples/bandwidthconstraints/public/helpers.js",
@@ -45,11 +45,18 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "prismjs": "^1.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "stackblur-canvas": "^1.4.0",
     "twilio": "^3.0.0-rc.16",
     "twilio-video": "^1.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "browserify": "^14.3.0",
     "copyfiles": "^1.2.0",
     "npm-run-all": "^4.0.2",
